syntax = "proto3";
option go_package="github.dev/nireitdev/go-C2-Prana/proto";

//Comandos de Admin/Implant hacia Server
service Server{
	rpc AdminCmd( AdminRequest ) returns ( AdminResult );

	//Implant cmds:
	rpc ImplantCmd( ImplantRequest) returns ( ImplantResult );
	rpc ImplantAlive(AliveMsg) returns (Empty);
}

//Server "push" comandos hacia Implant
service PushCommand{
	rpc PushCmd( PushRequest) returns (PushResult);
}

message AdminRequest {
	string Request = 1;
}

message AdminResult {
	string Result = 1;
}

message ImplantRequest {
	string Request = 1;
}

message ImplantResult {
	string Result = 1;
}

message PushRequest {
	string Request = 1;
}

message PushResult {
	string Result = 1;
}

message AliveMsg{
	string ImplantID = 1;
	string IpAddr = 2;
	string OS = 3;
}

message Empty{

}
